--- a/src/main/resources/error-view.fxml
+++ b/src/main/resources/error-view.fxml
@@ -6,26 +6,22 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="150.0" maxWidth="300.0" minHeight="150.0" minWidth="300.0" prefHeight="150.0"
-      prefWidth="300.0" style="-fx-background-color: #606060;" xmlns="http://javafx.com/javafx/17"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sumdu.controller.ErrorController">
+<VBox alignment="CENTER" maxHeight="150.0" maxWidth="300.0" minHeight="150.0" minWidth="300.0" prefHeight="150.0" prefWidth="300.0" style="-fx-background-color: #93BAD2;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sumdu.controller.ErrorController">
     <children>
-        <Label fx:id="errorLabel" textFill="#eeeeee">
+        <Label fx:id="errorLabel" textAlignment="CENTER" textFill="#f0f0f0">
             <VBox.margin>
-                <Insets top="15.0"/>
+                <Insets top="15.0" />
             </VBox.margin>
             <font>
-                <Font name="Arial Bold" size="15.0"/>
+                <Font name="Arial Bold" size="15.0" />
             </font>
         </Label>
-        <Button centerShape="false" maxHeight="30.0" maxWidth="75.0" minHeight="30.0" minWidth="75.0"
-                onAction="#onOkButtonClick" prefHeight="30.0" prefWidth="75.0" style="-fx-background-color: #303030;"
-                text="OK" textAlignment="CENTER" textFill="#eeeeee">
+        <Button centerShape="false" maxHeight="30.0" maxWidth="75.0" minHeight="30.0" minWidth="75.0" onAction="#onOkButtonClick" prefHeight="30.0" prefWidth="75.0" style="-fx-background-color: #5084AB;" text="OK" textAlignment="CENTER" textFill="#f0f0f0">
             <font>
-                <Font name="Arial Bold" size="15.0"/>
+                <Font name="Arial Bold" size="15.0" />
             </font>
             <VBox.margin>
-                <Insets top="35.0"/>
+                <Insets top="35.0" />
             </VBox.margin>
         </Button>
     </children>
