--- a/src/main/resources/main-view.fxml
+++ b/src/main/resources/main-view.fxml
@@ -1,56 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="600.0" maxWidth="600.0" minHeight="600.0" minWidth="600.0" prefHeight="600.0" prefWidth="600.0"
-            style="-fx-background-color: #606060;" xmlns="http://javafx.com/javafx/17"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sumdu.controller.MainController">
-    <VBox layoutX="15.0" layoutY="15.0" prefHeight="470.0" prefWidth="570.0"
-          style="-fx-background-color: #606060; -fx-border-color: #505050;"/>
-    <TextField layoutX="15.0" layoutY="500.0" maxHeight="40.0" maxWidth="380.0" minHeight="40.0" minWidth="380.0"
-               prefHeight="40.0" prefWidth="380.0" promptText="INPUT"
-               style="-fx-background-color: #303030; -fx-prompt-text-fill: #eeeeee; -fx-text-fill: #eeeeee;">
+<AnchorPane maxHeight="625.0" maxWidth="600.0" minHeight="625.0" minWidth="600.0" prefHeight="625.0" prefWidth="600.0" style="-fx-background-color: #93BAD2;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sumdu.controller.MainController">
+    <ScrollPane hbarPolicy="NEVER" hmax="0.0" layoutX="14.0" layoutY="14.0" prefHeight="400.0" prefWidth="570.0" style="-fx-background-color: #5084AB; -fx-background: #93BAD2;">
+        <content>
+            <FlowPane fx:id="flowPane" prefWrapLength="550.0" />
+        </content>
+    </ScrollPane>
+    <TextField fx:id="inputField" alignment="CENTER" layoutX="15.0" layoutY="420.0" maxHeight="40.0" maxWidth="280.0" minHeight="40.0" minWidth="280.0" prefHeight="40.0" prefWidth="280.0" promptText="INPUT" style="-fx-prompt-text-fill: #5084AB; -fx-text-fill: #5084AB; -fx-background-color: #f0f0f0;">
         <font>
-            <Font name="Arial Bold" size="18.0"/>
+            <Font name="Arial Bold" size="18.0" />
         </font>
     </TextField>
-    <Button layoutX="400.0" layoutY="500.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="185.0"
-            style="-fx-background-color: #303030;" text="ADD" textFill="#eeeeee">
+   <AnchorPane layoutX="305.0" layoutY="420.0" maxHeight="40.0" maxWidth="280.0" minHeight="40.0" minWidth="277.0" prefHeight="40.0" prefWidth="277.0" style="-fx-background-color: #f0f0f0; -fx-background-radius: 3px;">
+      <children>
+         <RadioButton fx:id="firstRadio" layoutX="40.0" layoutY="8.0" mnemonicParsing="false" onMouseClicked="#onFirstRadioClick">
+            <graphic>
+               <Label text="First" textFill="#5084ab">
+                  <font>
+                     <Font name="Arial Bold" size="18.0" />
+                  </font>
+                  <opaqueInsets>
+                     <Insets />
+                  </opaqueInsets>
+                  <padding>
+                     <Insets left="5.0" />
+                  </padding>
+               </Label>
+            </graphic>
+         </RadioButton>
+         <RadioButton fx:id="lastRadio" layoutX="170.0" layoutY="8.0" mnemonicParsing="false" onMouseClicked="#onLastRadioClick">
+            <graphic>
+               <Label text="Last" textFill="#5084ab">
+                  <font>
+                     <Font name="Arial Bold" size="18.0" />
+                  </font>
+                  <opaqueInsets>
+                     <Insets />
+                  </opaqueInsets>
+                  <padding>
+                     <Insets left="5.0" />
+                  </padding>
+               </Label>
+            </graphic>
+         </RadioButton>
+      </children>
+   </AnchorPane>
+    <Button layoutX="15.0" layoutY="470.0" maxHeight="40.0" maxWidth="280.0" minHeight="40.0" minWidth="280.0" mnemonicParsing="false" onMouseClicked="#onAddButtonClick" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5084AB;" text="ADD" textFill="#f0f0f0">
         <font>
-            <Font name="Arial Bold" size="18.0"/>
+            <Font name="Arial Bold" size="18.0" />
         </font>
     </Button>
-    <Button layoutX="15.0" layoutY="546.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="185.0"
-            style="-fx-background-color: #303030;" text="DROP" textFill="#eeeeee">
+    <Button layoutX="305.0" layoutY="520.0" maxHeight="40.0" maxWidth="280.0" minHeight="40.0" minWidth="280.0" mnemonicParsing="false" onMouseClicked="#onRemoveButtonClick" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5084AB;" text="REMOVE" textFill="#f0f0f0">
         <font>
-            <Font name="Arial Bold" size="18.0"/>
+            <Font name="Arial Bold" size="18.0" />
         </font>
     </Button>
-    <Button layoutX="400.0" layoutY="546.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="185.0"
-            style="-fx-background-color: #303030;" text="CLEAR" textFill="#eeeeee">
+    <Button layoutX="15.0" layoutY="570.0" maxHeight="40.0" maxWidth="280.0" minHeight="40.0" minWidth="280.0" mnemonicParsing="false" onMouseClicked="#onClearButtonClick" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5084AB;" text="CLEAR" textFill="#f0f0f0">
         <font>
-            <Font name="Arial Bold" size="18.0"/>
+            <Font name="Arial Bold" size="18.0" />
         </font>
     </Button>
-    <Button layoutX="208.0" layoutY="546.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="185.0"
-            style="-fx-background-color: #303030;" text="SIZE" textFill="#eeeeee"
-            onMouseClicked="#onArraySizeButtonClick">
+    <Button layoutX="305.0" layoutY="570.0" maxHeight="40.0" maxWidth="280.0" minHeight="40.0" minWidth="280.0" mnemonicParsing="false" onMouseClicked="#onSizeButtonClick" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5084AB;" text="SIZE" textFill="#f0f0f0">
         <font>
-            <Font name="Arial Bold" size="18.0"/>
+            <Font name="Arial Bold" size="18.0" />
         </font>
     </Button>
-    <Circle accessibleRole="BUTTON" fill="#303030" layoutX="562.0" layoutY="462.0" onMouseClicked="#onAboutButtonClick"
-            radius="18.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0"/>
-    <Text fill="#eeeeee" onMouseClicked="#onAboutButtonClick" strokeType="OUTSIDE" strokeWidth="0.0" text="?"
-          textAlignment="CENTER" x="556.0" y="469.0">
-        <font>
-            <Font name="Arial Bold" size="20.0"/>
-        </font>
-    </Text>
+   <Button layoutX="305.0" layoutY="470.0" maxHeight="40.0" maxWidth="280.0" minHeight="40.0" minWidth="280.0" mnemonicParsing="false" onMouseClicked="#onPollButtonClick" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5084AB;" text="POLL" textFill="#f0f0f0">
+      <font>
+         <Font name="Arial Bold" size="18.0" />
+      </font>
+   </Button>
+   <Button layoutX="15.0" layoutY="520.0" maxHeight="40.0" maxWidth="280.0" minHeight="40.0" minWidth="280.0" mnemonicParsing="false" onMouseClicked="#onPeekButtonClick" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5084AB;" text="PEEK" textFill="#f0f0f0">
+      <font>
+         <Font name="Arial Bold" size="18.0" />
+      </font>
+   </Button>
+   <StackPane layoutX="543.0" layoutY="15.0" maxHeight="40.0" maxWidth="40.0" minHeight="40.0" minWidth="40.0" prefHeight="40.0" prefWidth="40.0">
+      <children>
+          <Circle accessibleRole="BUTTON" fill="#5084ab" onMouseClicked="#onAboutButtonClick" radius="18.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+          <Text fill="#f0f0f0" onMouseClicked="#onAboutButtonClick" strokeType="OUTSIDE" strokeWidth="0.0" text="?" textAlignment="CENTER" x="556.0" y="469.0">
+              <font>
+                  <Font name="Arial Bold" size="20.0" />
+              </font>
+          </Text>
+      </children>
+   </StackPane>
 </AnchorPane>
